--- a/view.css
+++ b/view.css
@@ -1,6 +1,14 @@
 /* Bordered form */
 form {
     border: 3px solid #f1f1f1;
+    
+
+}
+body{
+background-image: url('');
+background-size: auto;
+
+
 }
 
 /* Full-width inputs */
@@ -12,6 +20,7 @@ input[type=text], input[type=password] {
     border: 1px solid #ccc;
     box-sizing: border-box;
 }
+
 
 /* Set a style for all buttons */
 button {
@@ -29,20 +38,16 @@ button:hover {
     opacity: 0.8;
 }
 
-/* Extra style for the cancel button (red) */
-.cancelbtn {
-    width: auto;
-    padding: 10px 18px;
-    background-color: #f44336;
-}
-
-
 
 /* Add padding to containers */
 .container {
+    background-color: white;
+    width:50%;
     padding: 16px;
     text-align: center;
-    margin: 24px 0 12px 0;
+    margin: 150px 0 150px 0;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 /* The "Forgot password" text */
