--- a/view.css
+++ b/view.css
@@ -1,12 +1,12 @@
 /* Bordered form */
 form {
-    border: 3px solid #f1f1f1;
-    
+    /*border: 3px solid #f1f1f1;*/
 
 }
 body{
-background-image: url('');
-background-size: auto;
+    background-image: url('skyline2.png');
+    min-width: 50%;
+    background-size: 100%;
 
 
 }
@@ -42,7 +42,8 @@ button:hover {
 /* Add padding to containers */
 .container {
     background-color: white;
-    width:50%;
+    width:20%;
+    min-width: 100px;
     padding: 16px;
     text-align: center;
     margin: 150px 0 150px 0;
