--- a/view.css
+++ b/view.css
@@ -1,19 +1,7 @@
-/* Bordered form */
-form {
-    /*border: 3px solid #f1f1f1;*/
-
-}
 body{
-
-
-
-
     background-image: url('skyline2.png');
     min-width: 50%;
     background-size: 100%;
-
-
-
 }
 
 /* Full-width inputs */
@@ -52,6 +40,7 @@ button:hover {
     padding: 16px;
     text-align: center;
     margin: 150px 0 150px 0;
+    margin-top:15%;
     margin-right: auto;
     margin-left: auto;
 }
