--- a/view.css
+++ b/view.css
@@ -1,7 +1,7 @@
 body{
-    background-image: url('skyline2.png');
+    background-image: url('skyline2.png') ;
     min-width: 50%;
-    background-size: 100%;
+    background-size: cover;
 }
 
 /* Full-width inputs */
@@ -33,16 +33,18 @@ button:hover {
 
 
 /* Add padding to containers */
+
 .container {
-    background-color: white;
+    border-radius: 30px;
+    background-color:white;
     width:20%;
     min-width: 100px;
     padding: 16px;
+    padding-bottom: 300px;
     text-align: center;
     margin: 150px 0 150px 0;
-    margin-top:15%;
     margin-right: auto;
-    margin-top: 15%;
+    margin-top: 20%;
     margin-left: auto;
 }
 
