--- a/view.css
+++ b/view.css
@@ -1,7 +1,7 @@
 body{
     background-image: url('skyline2.png');
     min-width: 50%;
-    background-size: 100%;
+    background-size: cover;
 }
 
 /* Full-width inputs */
