--- a/view.css
+++ b/view.css
@@ -6,7 +6,8 @@ body{
 
 /*body content */ 
 #info {
-    background-color: gray;
+    opacity: 0.5;
+    background-color: black;
     margin-top: 100px;
     padding: 50px;
 }
