--- a/view.css
+++ b/view.css
@@ -4,13 +4,32 @@ body{
     background-size: cover;
 }
 
+
 /*body content */ 
 #info {
     opacity: 0.5;
     background-color: black;
     margin-top: 100px;
-    padding: 50px;
+    padding: 30px;
 }
+
+.list-item {
+    min-width: 500px;
+    min-height: 200px;
+    width:auto;
+    padding: 20%;
+    background-color: gray;
+    opacity:0.5;
+    padding: 10%;
+    margin-bottom: 50px;
+    margin-top: 20px;
+}
+#disp-list {
+    list-style-type: none;
+    margin-right:25%;
+    margin-left: 25%;
+}
+
 
 /* Full-width inputs */
 input[type=text], input[type=password] {
@@ -25,10 +44,11 @@ input[type=text], input[type=password] {
 
 /* Set a style for all buttons */
 button {
-    background-color: #4CAF50;
+    background-color: #2c5fb2;
     color: white;
     padding: 14px 20px;
-    margin: 8px 0;
+    margin: 8px;
+    margin-bottom: 5px;
     border: none;
     cursor: pointer;
     width: 100%;
@@ -41,12 +61,6 @@ button:hover {
 
 #fb-button #logout-button {
     display: none;
-}
-
-/* The "Forgot password" text */
-span.psw {
-    float: right;
-    padding-top: 16px;
 }
 
 /* Change styles for span and cancel button on extra small screens */
